# robot-code

./: .dockerignore  .env  .gcloudignore  .gitignore  .prettierrc  DESIGN.md  Dockerfile  README.md  assembly-script.ts  build.sh  config.json  features.json  fssync.sh  onshape.sh  package-lock.json  package.json  parts.json  pyproject.toml  requirements.txt  robot.sh  script.sh  setup.py  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
.storage/: id_file.json
api/: api_base.py  api_path.py  conf.py  constants.py  exceptions.py  key_api.py  logger.py  oauth_api.py  onshape.py  utils.py
backend/: api.py  auto_assembly.py  generate_assembly.py  oauth.py  server.py  test.py
backend_tools/: pull_scripts.py
common/: str_utils.py
featurescript/: __init__.py  conf.py  endpoints.py  feature_studio.py  fs_cli.py  manager.py  onshape.py
frontend/: .eslintrc.cjs  NOTES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
fs_backend/: robot_tube_ui.py  test.py
fs_code/: arcUtils.fs  assemblyAlign.fs  assemblyMate.fs  assemblyMirror.fs  assemblyScript.fs  boreFillet.fs  computePointTransform.fs  coreExport.fs  coreUtils.fs  customError.fs  customManipulator.fs  editingLogicUtils.fs  frcFrame.fs  keepout.fs  lookupTableGenerator.fs  manipulatorUtils.fs  miscUtils.fs  opPointTransform.fs  presetHoleTable.fs  pulleyText.fs  robotAttribute.fs  robotBelt.fs  robotBeltCommon.fs  robotBeltConst.fs  robotComponent.fs  robotComponentTable.fs  robotFillet.fs  robotFrame.fs  robotFrameCommon.fs  robotHole.fs  robotMotorMount.fs  robotPlate.fs  robotPlateAttribute.fs  robotPlateCommon.fs  robotPlateExtrude.fs  robotPlateGeometry.fs  robotPulley.fs  robotPulleyCommon.fs  robotTag.fs  robotTubeGenerator.fs  (+10 more)
fs_gen/: robot_belt.py  robot_bore.py  robot_pulley.py  robot_tube.py  robot_tube_ui.py
onshape_api/: README.md  __init__.py  assertions.py  exceptions.py
python/: CodeManager.py  code_manager.py  codemanager.py  fs_client.py  fsclient.py  fsconstants.py  script.py  update_versions.py  updateversions.py
robot_code/: api_test.py  conf.py  confirm.py  (+8 more)
(+334 files in other folders)
