[tool.poetry]
name = "robot-code"
version = "0.1.0"
description = ""
authors = ["Alex Kempen <alex.bookreader@gmail.com>"]
readme = "README.md"
packages = [
    { include = "api" },
    { include = "common" },
    { include = "featurescript" },
    { include = "robot_code" },
    { include = "backend" },
    { include = "backend_tools" },
]

[tool.poetry.dependencies]
python = "^3.12"
# Onshape API
requests = "^2.31.0"
json5 = "^0.9.14"
# Server
flask = "^3.0.0"
firebase-admin = "^6.3.0"
# google-cloud-firestore = "^2.13.1"
gunicorn = "^21.2.0" # Used in cloud container
requests-oauthlib = "^1.3.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
